--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "authorization": "^1.0.9",
     "express": "^4.19.1",
-    "factorial": "^2.0.0",
-    "serverless": "^3.38.0"
+    "factorial": "^2.0.0"
   }
 }
